# hodor

./: .env.example  .gitlab-ci-example.yml  .gitlab-ci.yml  AGENTS.md  AUTOMATED_REVIEWS.md  Dockerfile  FOCUS_IMPROVEMENTS.md  IMPROVEMENTS.md  README.md  SKILLS.md  justfile  pyproject.toml
.github/workflows/: docker-release.yml  pr-review.yml
.gitlab/: README-CI.md
docs/: EVAL_WITH_CLI_PROXY.md  SKILLS.md
hodor/: __init__.py  agent.py  cli.py  github.py  gitlab.py  review_parser.py  skills.py  terminal_compat.py  workspace.py
hodor/llm/: __init__.py  openhands_client.py
hodor/prompts/: pr_review_prompt.py
hodor/prompts/templates/: context_worker_skill.md  default_review.md  delegate_tool_description.j2  orchestrator_workflow.md  verifier_skill.md  worker_skill.md
tests/: conftest.py
